<resources>
    <string name="app_name">RolePay</string>

    <!--activity_main-->
    <string name="new_environment_text">Luo uusi ympäristö:</string>
    <string name="new_environment_button">Uusi ympäristö</string>
    <string name="login_text">Kirjaudu sisään:</string>
    <string name="login_input_text">Private token</string>
    <string name="login_input_hint">Private token</string>
    <string name="login_button_text">Kirjaudu</string>
    <string name="login_error_text">Virhe kirjautuessa. Yritä uudelleen.</string>
    <string name="test_text"></string>
    <string name="cancel">Peruuta</string>

    <!--activity_user_main_view-->
    <string name="balance_text">Saldo</string>
    <string name="balance_value_text">0€</string>
    <string name="new_payment_text">Uusi maksu</string>
    <string name="new_request_text">Uusi pyyntö</string>
    <string name="public_token_text">Julkinen token:</string>
    <string name="public_token_value_text">1234567890</string>
    <string name="new_payment_button">Uusi maksu</string>
    <string name="new_request_button">Uusi pyyntö</string>
    <string name="logout">Kirjaudu ulos</string>
    <string name="logout_dialog_msg">Haluatko varmasti kirjautua ulos?</string>

    <!--activity_user_balance-->
    <string name="balance_history_text">Maksuhistoria:</string>

    <!--activity_admin-->
    <string name="new_user_text">Uusi käyttäjä</string>
    <string name="environment_name">Ympäristön nimi</string>
    <string name="save">Tallenna</string>
    <string name="private_token">Salainen token:</string>
    <string name="remove_user">Poista käyttäjä</string>
    <string name="remove_user_msg">Haluatko varmasti poistaa tämän käyttäjän?</string>
    <string name="remove_environment">Poista ympäristö</string>
    <string name="remove_environment_msg">Haluatko varmasti poistaa koko ympäristön ja sen käyttäjät?</string>
  
    <!--activity_transaction-->
    <string name="transaction">Maksutapahtuma</string>
    <string name="transaction_type">Maksu / pyyntö</string>
    <string name="pay">Maksa</string>
    <string name="request">Pyydä</string>
    <string name="amount">Summa</string>
    <string name="empty_amount">Syötä summa!</string>
    <string name="empty_publicToken">Syötä julkinen token!</string>
</resources>