<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_main_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserMainView">

    <TextView
        android:id="@+id/rolepay_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/balance_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/balance_value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance_value_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/new_payment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_payment_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/new_payment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_payment_button"/>

    <TextView
        android:id="@+id/new_request_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_request_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/new_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_request_button"/>

    <TextView
        android:id="@+id/public_token_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/public_token_text"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/public_token_val_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/public_token_value_text"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_button_text" />

</LinearLayout>