<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaction_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Transaction">

    <TextView
        android:id="@+id/rolepay_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/transaction_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/public_token_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_input_text"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText_public_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/payment_amount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Switch
        android:id="@+id/switch_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_type"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/confirm_button_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay" />

</LinearLayout>